[metadata]
name = campd_visualizer
version = 0.1.0
author = Adnan Choudhary
author_email = adnanchoudhary1@gmail.com
description = CAMPD Visualizer Tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    matplotlib

[options.packages.find]
exclude =
    tests
    tests.*
